--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Monitora</string>
+    <string name="scan_for_devices">Buscar por Dispositivos</string>
 </resources>
